--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6"
   },
